fixed squares on mobile

--- a/src/components/animations/other-animation-examples/squares/Squares.css
+++ b/src/components/animations/other-animation-examples/squares/Squares.css
@@ -1,9 +1,9 @@
 svg#squares {
   border: 2px solid black;
   width: 100%;
-  height: 500px;
   margin: 0 auto;
   display: block;
+  overflow: hidden;
 }
 svg#squares rect {
   stroke: black;
