--- a/src/index.css
+++ b/src/index.css
@@ -14,3 +14,6 @@ code {
 iframe {
 	max-width: 95vw;
 }
+svg {
+	overflow: hidden;
+}
